Azure-Bootcamp/week2/day2/manifests/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nginx-ingress

spec:
  ingressClassName: nginx

  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: nginx-service
            port:
              number: 80
